ping/src/css/style.less
// fonts 

@import url(../../fonts/fonts.css);

@Open-sans-light:  'open_sans_light', Tahoma, sans-serif;
// how to fallback extrablod font? 
@Open-sans-bold: 'open_sans_extrabold', sans-serif;
@League-gothic-regular:  'league_gothic_regular', sans-serif;

// variables 

@text-color-white: white;
@text-color-pink: #edbfff;
@gray-color: #ececec;
@light-gray: #f9f9f9;

// mixins 

.paddings {
    padding-left: 20px;
    padding-right: 20px;
}

.url {
        display: block;
        color: @text-color-white;
        text-decoration: none;
        text-transform: uppercase;
        font-family: @League-gothic-regular;
}
// common

body {
  width: 100%;
  height: 100%;
  max-height: 800px;
  font-family: @Open-sans-light;
  font-size: 16px;
  line-height: 24px;
  background-image: url(../../img/body-bg.jpg);
  background-position-x: center;
  background-repeat: no-repeat;
}

main.container-fluid {
  padding-left: 0;
  padding-right: 0;
}

.row {
    margin-right: 0px;
    margin-left: 0px;
}

h1, 
h2, 
h3 {
  font-family: @League-gothic-regular;
}

header {
  width: 100%;
  .paddings;
  padding-top: 60px;
  // margin-bottom: 75px;
  // background-color: grey;

    .logo {
          display: block;
          font-size: 0px;
          width: 155px;
          height: 39px;
          margin-bottom: 25px;
          margin-left: auto;
          margin-right: auto;

          img {
              width: 155px;
              height: 39px;
          }
    }
}

.main-nav {
  ul {
    margin: 0;
    padding: 0;
    list-style: none;
    display: flex;
    flex-direction: row;
    // margin-bottom: 75px;

    li {
      a {
        margin-right: 20px;
        .url;
        font-size: 24px;

        &:hover,
        .active {
          border-bottom: 2px solid @text-color-pink;
        }
      }
    }
  }
}

.slider {
  .carousel-indicators {
    bottom: -50px;

    li {
        background-color: rgba(0,0,0, 0.3);
        border: none;
        width: 15px;
        height: 15px;
    }

    .active {
        background-color: @text-color-white;
        width: 15px;
        height: 15px;
        margin: 1px;
        border: 3px solid rgba(0,0,0, 0.6);
    }
  }

  .carousel-control.left,
  .carousel-control.right {
    background-image: none;
  }

  .wrapper-slider {
    margin-top: 30px;
    margin-bottom: 100px;

    // delete next line after build slider
    // height: 200px;

    .item {
      height: 200px;
    }
  }

  h1,
  h2 {
    text-align: center;
    line-height: 24px;
  }

  h1 {
    font-size: 36px;
    color: @text-color-white;
  }

  h2 {
    font-size: 18px;
    color: @text-color-pink;
   }
}

// iphone-img - 274px-434px

.about {
  width: 100%;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 75px;
  padding-bottom: 60px;
  background-image: linear-gradient(to top, #322539 0%, #745083 100%);
  color: @text-color-white;
  // why shadow didn't work? 
  // box-shadow: 0px 5px 20px 0px rgba(0,0,0,0.75);

  article {
    padding-left: 51px;
    background-image: url(../../img/about-sprite.png);
    background-repeat: no-repeat;
        margin-bottom: 50px;

    a {
      .url;
      float: right;

      &:hover {
        text-shadow: 0 0 8px rgba(255, 255, 255, 0.8);
      }
    }
  }
}




.content {
    width: 100%;
  .paddings;
  padding-top: 90px;
  padding-bottom: 30px;
  background-color: @light-gray;
  box-shadow: inset 0px 2px 4px 0px rgba(0,0,0,0.5);

  .review {
    background-color: @text-color-white;
    padding: 35px;
    position: relative;
    margin-bottom: 60px;

    &:before {
      content: '';
      display: block;
      position: absolute;
      width: 49px;
      height: 49px;
      // background-color: blue;
      background-image: url(../../img/review-img.png);
      top: 34px;
      left: -19px;
    }

    .title {
      font-family: @League-gothic-regular;
      font-size: 24px;
      text-transform: uppercase;
    }

    p:first-child {
      color: black;
      margin-bottom: 0px;
    }
    p:nth-child(2) {
      color: @text-color-pink;
    }
  }

  .articles {
    padding-left: 0px;
    padding-right: 0px;

    article {
      padding-left: 55px;
      background-image: url(../../img/articles-img.png);
      background-repeat: no-repeat;
    }
    h4 {
      font-family: @Open-sans-bold;
      font-size: 16px;
    }

    p {
      font-size: 16px;
    }

    a {
      .url;
      color: black;
      float: right;

            &:hover {
        // text-decoration: underline;
        border-bottom: 2px solid @text-color-pink;
      }
    }

  }

  .logos {
    margin-top: 90px;
      ul {
          margin: 0;
          padding: 0;
          list-style: none;
          display: flex;
          justify-content: center;
          text-align: center;
          flex-wrap: wrap;

          li {
            width: 70px;
            height: 64px;
            margin-right: 25px;
            margin-left: 25px;
            margin-bottom: 25px;
            background-image: url(../../img/logos-sprite.png);

            &:nth-child(2) {
              background-position-x: -910px;
            }

            &:nth-child(3) {
                  background-position-x: -1042px;
            }

            &:nth-child(4) {
                  background-position-x: -1179px;
            }

            &:nth-child(5) {
                  background-position-x: -1300px;
                  width: 110px;
                      margin-right: 10px;
            }

            &:last-child{
              background-position-x: -1472px;
              margin-left: 10px;
            }
          }
    }
  }
}

.categories {
  width: 100%;
  .paddings;
  padding-top: 90px;
  padding-bottom: 90px;
  background-color: @gray-color;
  border-top: 1px solid darken(@gray-color, 10%);
}

footer {
  width: 100%;
  .paddings;
  padding-top: 40px;
  // background-color: grey;
  background-image: url(../../img/footer-bg.jpg);

  p {
    color: @text-color-white;
    text-align: center;
  }

      .wrapper-footer {
    margin-bottom: 70px;
  }
}

@media screen and (max-width: 767px) {
  .header-nav {
    ul {
      li:first-child {
        margin-left: auto;
        margin-right: auto;
      }
      li:nth-child(n+2) {
        display: none;
      }
    }
  }
}

@media screen and (min-width: 768px) {
  header {
    .logo {
      float: left; 
    }

    .header-nav {
      clear: both;

      a {
        font-size: 24px;
      }
    }
  }

.slider {
      position: relative;

      &::before {
          content: "";
          display: block;
          position: absolute;
          top: 10%;
          bottom: 10%;
          width: 100%;
          background-color: rgba(0,0,0, 0.3);
      }

  .carousel-control {
    width: 50px;
  }

  h1, 
  h2 {
    text-align: left;
  }

  .carousel-indicators {
    margin-left: 0;
  }

  .carousel-caption {
    // display: flex;
    float: left;
    position: relative;
    padding-top: 130px;
    text-align: left;
    width: 272px;
    left: 8%;

    .text {
      font-size: 16px;
      // line-height: 30px;
      font-family: @Open-sans-light;
    }
  }

  .carousel-control .glyphicon-chevron-right {
    right: 30%;
  }

  .carousel-control .glyphicon-chevron-left {
    left: 30%;
  } 

  .img-container {
    background-image: url(../../img/iphone-img.png);
    background-repeat: no-repeat;
    width: 274px;
    height: 434px;
    float: right;
    margin-right: 60px;
  }
}

  .about {
    article {
      h3 {
          margin-top: 0px;
      }
    }
  }

  .logos {
    ul {
      justify-content: space-between;
    }
  }

  .footer-nav {
    a {
      font-size: 20px;
    }
  }

  footer {
    p {
      float: right;
      padding-right: 20px;
    }
  }
}

@media screen and (min-width: 960px) {

  header {
    .logo {
      display: inline-block;
    }

    .header-nav {
      float: right;
      clear: right;
    }
  }

  .about {
    article:nth-child(2) {
          background-position-x: -335px;
    }

    article:last-child {
      background-position-x: -665px;
    }
  }

  .footer-nav {
    float: left;
  }

}

@media screen and (min-width: 980px) {
  .centrator {
    width: 960px;
    margin-left: auto;
    margin-right: auto;
  }

  .wrapper-header,
  .wrapper-slider,
  .wrapper-about,
  .wrapper-content,
  .wrapper-categories,
  .wrapper-footer,
  .logos
   {
    .centrator;
  }

}

// has horizontal scroll on 768px and 960px

